# sber_cloud_camp

./: .gitignore  Dockerfile  README.md  config.py  pyproject.toml
src/: api.py
test_data/: default_data.py  invalid_data.py
tests/: conftest.py  test_posts.py
