[tool.poetry]
name = "sber-cloud-camp"
version = "0.1.0"
description = ""
authors = ["Ivan Khokhlov <xxx.mailbox73@gmail.com>"]
readme = "README.md"
packages = [{include = "sber_cloud_camp"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
